# CodeCliManager

./: .gitignore  README.md  fast_push_mac.sh  fast_push_win.ps1  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: main.ts  markdown.ts  markdownCache.ts  messageUtils.ts  settingsUi.ts  styles.css  tauriApi.ts  theme.css  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  model_fetch.rs
